@startuml
title Domain Class Diagram

note as note1 #white
All classes have an Id
generated by Spring
end note

'settings
skinparam class {
classAttributeIconSize 0
ArrowColor black
BorderColor black
BackgroundColor white
}

skinparam shadowing false
skinparam stereotypeCBackgroundColor LightBlue
skinparam nodesep 50
skinparam noteBorderColor black
hide methods

'classes
class Address {
- houseNumber
- addition
- street
- postalcode
- city
}

class Location {
- name
}

class Room {
- floor
- capacity
}

class Reservation {
- date
- startTime
- endTime
- workplaceAmount
}

class Recurrence <<embeddable>> {
- active
}

enum RecurrencePattern <<enumeration>> {
DAILY
WEEKLY
BIWEEKLY
MONTHLY
}

class Employee {
- firstName
- lastName
}

'Relations
Address "1" -down- Location
Location -right- "1..*" Room
Room "1" -- Reservation
Reservation -- "1" Employee
Reservation --"1" Recurrence
Recurrence .. RecurrencePattern:<<use>>

@enduml
